# ContextFlow

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  calculator.py  debug_db.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
daemon-rust/: Cargo.toml
daemon-rust/src/: cli.rs  config.rs  db.rs  knowledge.rs  main.rs  prompts.rs
daemon-rust/src/intelligence/: anthropic.rs  gemini.rs  mod.rs  openai.rs  privacy.rs
prompts/: fix.md  ki.md  plan.md  summarize.md  task-create.md
scripts/: shell-hook.ps1  shell-hook.sh
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts
