[package]
name = "daemon-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6.1"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
pathdiff = "0.2"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
base64 = "0.22"
regex = "1.10"
